src/test/ui/suggestions/option-content-move.stderr
error[E0507]: cannot move out of `selection.1` which is behind a shared reference
  --> $DIR/option-content-move.rs:11:20
   |
LL |                 if selection.1.unwrap().contains(selection.0) {
   |                    ^^^^^^^^^^^
   |                    |
   |                    move occurs because `selection.1` has type `Option<String>`, which does not implement the `Copy` trait
   |                    help: consider borrowing the `Option`'s content: `selection.1.as_ref()`

error[E0507]: cannot move out of `selection.1` which is behind a shared reference
  --> $DIR/option-content-move.rs:29:20
   |
LL |                 if selection.1.unwrap().contains(selection.0) {
   |                    ^^^^^^^^^^^
   |                    |
   |                    move occurs because `selection.1` has type `std::result::Result<String, String>`, which does not implement the `Copy` trait
   |                    help: consider borrowing the `Result`'s content: `selection.1.as_ref()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
